# substrate-did

./: Cargo.toml  README.md  build.rs
docs/: DESIGN_RATIONALE.md
runtime/: Cargo.toml
runtime/src/: did.rs  lib.rs  mock.rs  template.rs  tests.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: build.sh
src/: chain_spec.rs  cli.rs  main.rs  service.rs
