[build-dependencies]
vergen = '3'

[package]
name = "identity-chain"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "identity-chain"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
identity-chain-runtime = { path = "runtime" }
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.8.0"
parity-codec = "4.1.1"
trie-root = "0.14.0"

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'