[build-dependencies]
vergen = '3'

[package]
name = "identity-chain"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "identity-chain"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
identity-chain-runtime = { path = "runtime" }
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
trie-root = "0.15.2"
hash-db = { version = "0.15.2", default-features = false }

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '0c08276bdbeac2e0f9bf1a5bc91b04271460e652'
