[package]
authors = ['Ricardo Rius <ricardo@rius.info>']
edition = '2018'
name = 'identitychain-runtime'
version = '2.0.0'

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
]

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.3'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'dfcc0850ab581a4804921904f8015bacf2e63ea7'
