[package]
name = "identity-chain-runtime"
version = "2.0.0"
authors = ["Ricardo Rius"]
edition = "2018"

[features]
default = ["std"]
no_std = [
	"contracts/core",
]
std = [
	"parity-codec/std",
	"client/std",
	"contracts/std",
	"did/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
]

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.contracts]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-contracts'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.did]
default_features = false
git = 'https://github.com/riusricardo/did-module.git'
package = 'srml-did'
branch = 'master'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '4.1.1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '311279449ee9d17b0cd8b2cb876326eebd3001e4'

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }