[package]
name = "identity-chain-runtime"
version = "2.0.0"
authors = ["Ricardo Rius"]
edition = "2018"

[features]
default = ["std"]
no_std = [
	"contracts/core",
]
std = [
	"codec/std",
	"client/std",
	"contracts/std",
	"did/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
]

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.contracts]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-contracts'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.did]
default_features = false
git = 'https://github.com/riusricardo/srml-did.git'
package = 'srml-did'
branch = 'master'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
features = ['derive']
version = '1.0.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '3198388248bbcbad019a5810a36523bc60b0e47f'

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }
